<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/matrixTableHeaderNo"
        android:layout_width="@dimen/common_layout_zero_dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/label_matrix_table_header_no"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/matrixTableHeaderOrigin"
        android:layout_width="@dimen/common_layout_zero_dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/label_matrix_table_header_origin"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/matrixTableHeaderDestination"
        android:layout_width="@dimen/common_layout_zero_dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/label_matrix_table_header_destination"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/matrixTableHeaderDistance"
        android:layout_width="@dimen/common_layout_zero_dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/label_matrix_table_header_distance"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/matrixTableHeaderEta"
        android:layout_width="@dimen/common_layout_zero_dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/label_matrix_table_header_eta"
        android:textAlignment="center"
        android:textColor="@color/white" />


</merge>